Refactor Dockerfile to use mounted volume for source code and update PowerPlot class to include auto-refresh functionality and improved data handling

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,3 +5,7 @@ services:
       context: .
     ports:
       - 50051:50051
+    volumes:
+      - .:/app
+    environment:
+      - TZ=Europe/Berlin
